# threat-modelling-with-ai

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json  settings.local.json
.claude/agents/: apply-fix.md  reflection.md  reflector.md  remediation.md
.claude/skills/fix-commits/: SKILL.md
.codex/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: devsecops.yml
.hashicorp/vault-radar/: config.json
agent/: pyproject.toml  vuln-agent.config.json
agent/semgrep-rules/: python-security.yaml
agent/vuln_agent/: __init__.py  cli.py  config.py  model.py  verdict.py
agent/vuln_agent/llm/: base.py  noop_adapter.py
agent/vuln_agent/scanners/: base.py  deps.py  radar.py  semgrep.py
ai-secure-sdlc/: README.md
ai-security-validation/: README.md
eval/: capture-apply-fix.sh  eval-agent-permissions.sh  eval-apply-fix.sh  eval-radar.sh  eval-readme.md  eval-terraform-mcp-creds.sh  model-pricing.json  scorecard.html  seed-eval-vault.sh  smoke-ant.sh
eval/fixtures/apply-fix/noop-bail/: meta.json  plan.md  (+1 more)
eval/judge/: apply-fix-rubric.md  run-judge.sh
infrastructure/: .gitignore  .terraform.lock.hcl  main.tf  variables.tf  versions.tf
infrastructure/sample-app/: python.py
script/: devcontainer-postcreate.sh  devcontainer-poststart.sh  fetch-openai-key.sh  fetch-terraform-mcp-creds.sh  fetch-vault-radar-mcp-creds.sh  init-script.sh  post-reflection-comment.sh  print-radar-ide-connection.sh  radar-precommit.sh  rotate-radar-sp-key.sh  validate-commits.sh
(+22 files in other folders)
